adjust to fix height and set overflow-y: scroll

--- a/src/components/projects/_projectListArea.scss
+++ b/src/components/projects/_projectListArea.scss
@@ -1,20 +1,20 @@
 .project-list-area {
   width: 100%;
-  min-height: calc(100vh - 8vh - 33.2rem);
+  height: calc(100vh - 8vh - 33.2rem);
   padding: 2rem 0;
   display: flex;
   flex-direction: column;
   justify-items: center;
   border: solid 0.1rem $primary-dark;
+  overflow-y: scroll;
   > div {
-    height: 3.6rem;
     display: flex;
     align-items: center;
     &:hover {
       background: #c7cfb780;
     }
     span {
-      padding: 0 1.5rem;
+      padding: 1rem 1.5rem;
       cursor: default;
     }
   }
